# wintls

./: CMakeLists.txt  example.c  wintls.c  wintls.h
CurlSchannel/: CMakeLists.txt  CurlSchannel.cpp  CurlSchannel.h  alpn.c  alpn.h  base64.c  base64.h  charhelper.h  connection_data.h  curl_multibyte.c  curl_multibyte.h  curl_opts.h  curl_printf.c  curl_printf.h  curl_sspi.c  curl_sspi.h  curlcode.h  debug.c  debug.h  dynbuf.c  dynbuf.h  hostcheck.c  hostcheck.h  memrchr.c  memrchr.h  msvc.h  schannel_curl.c  schannel_curl.h  schannel_verify.c  select.c  select.h  slist.c  slist.h  strcase.c  strcase.h  strerror.c  strerror.h  system_win32.c  system_win32.h  timeleft.c  (+7 more)
